kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: securekube-transaction-service
  labels:
    app: securekube-transaction-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: securekube-transaction-service

  template:
    metadata:
      labels:
        app: securekube-transaction-service

    spec:
      containers:
        - name: transaction-service
          image: securekube-transaction-service:1.1

          ports:
            - containerPort: 8000

          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
