kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: securekube-transaction-service

spec:
  selector:
    app: securekube-transaction-service

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
