kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: securekube-default-deny-ingress

spec:
  podSelector:
    matchLabels:
      app: securekube-transaction-service

  policyTypes:
    - Ingress
